--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -34,8 +34,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
+      - run: yarn install --frozen-lockfile
+      - run: yarn run build --if-present
 #      - run: ls
 #      - run: ls ./build
 #     - run: npm test
