--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -34,7 +34,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: 'yarn'
+
+
       - run: yarn install --frozen-lockfile
       - run: yarn run build --if-present
 #      - run: ls
