--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -39,6 +39,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      - run: ls -la
+
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check
