--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -65,7 +65,7 @@ jobs:
         continue-on-error: true
         working-directory: ./terraform
 
-      - run: bucket_name=$(terraform output bucket_name)
+      - run: terraform output
       - run: echo $bucket_name
 
       - run: redirect_bucket_name=$(terraform output redirect_bucket_name)
