--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -91,4 +91,5 @@ jobs:
       - name: Deploy static site to S3 bucket
         env:
           aws_bucket_name: ${{ secrets.AWS_BUCKET_NAME }}
-        run: aws s3 sync ./build/ s3://"$aws_bucket_name" --delete
+        run: aws s3 sync ../build/ s3://"${{ env.bucket_name }}" --delete
+        working-directory: ./terraform
