--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -27,6 +27,38 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Checkout into lastCommit
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+          path: lastCommit
+
+      - name: Get specific changed files
+        id: changed-files-terraform
+        uses: tj-actions/changed-files@v10.1
+        with:
+          path: lastCommit
+          files: |
+            terraform
+
+      - name: Run step if only the files listed above change
+        if: steps.changed-files-terraform.outputs.only_changed == 'true'
+        run: |
+          echo "Only files listed above have changed."
+
+#      - name: Run changed-files with defaults on the dir1
+#        id: changed-files-for-dir1
+#        uses: tj-actions/changed-files@v10.1
+#        with:
+#          path: dir1
+
+      - name: List all added files in dir1
+        run: |
+          for file in ${{ steps.changed-files-terraform.outputs.added_files }}; do
+            echo "$file was added"
+          done
+
+
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.0.9
