--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -14,7 +14,7 @@ jobs:
   call-terraform:
     uses: arthurdayton116/blog-site/.github/workflows/terraform-wf.yml@main
     with:
-      terraform_directory: terraform
+      terraform_directory: ./terraform
       environment: development
     secrets:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
