working directory change format v3

--- a/.github/workflows/terraform-wf.yml
+++ b/.github/workflows/terraform-wf.yml
@@ -50,7 +50,9 @@ jobs:
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check
-        working-directory: ${inputs.terraform_directory}
+        working-directory: ./${env.work-dir}
+        with:
+          work-dir: ${inputs.terraform_directory}
 
       # Init using workspace from Terraform Cloud
       - name: Terraform Init
