--- a/.github/workflows/terraform-wf.yml
+++ b/.github/workflows/terraform-wf.yml
@@ -28,7 +28,7 @@ jobs:
   terraform_job:
     name: Terraform Job
     runs-on: ubuntu-latest
-    environment: development
+    environment: ${{ inputs.environment }}
     env:
       TF_VAR_base_domain: ${{ secrets.TF_VAR_base_domain }}
     steps:
