add irl tag to env

--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -25,7 +25,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    environment: development
+    environment:
+      name: development
+      url: development
     needs: call-terraform
     # set environment variables
     env:
