--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -10,7 +10,77 @@ on:
   pull_request:
     branches: [ main ]
 
+
+
 jobs:
+  set-conditions:
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.step1.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
+    environment:
+      name: development
+      url: https://development
+    steps:
+      # Checkout
+      - uses: actions/checkout@v2
+      # Checkout previous commit for compare
+      # https://github.com/tj-actions/changed-files
+      - name: Checkout into lastCommit
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+          path: lastCommit
+
+      # Compare terraform directory to previous commit
+      - name: Get terraform changed files
+        id: changed-files-terraform
+        uses: tj-actions/changed-files@v10.1
+        with:
+          path: lastCommit
+          files: |
+            terraform
+
+      # set environment variable for determining if terraform apply should run
+      # https://docs.github.com/en/actions/learn-github-actions/workflow-commands-for-github-actions#setting-an-environment-variable
+      - name: Set tf_dir_changed var
+        id: tfChanged_true
+        if: steps.changed-files-terraform.outputs.all_changed_and_modified_files == 'true'
+        run: |
+          echo "tf_dir_changed=true" >> $GITHUB_ENV
+
+      - name: Set tf_dir_changed var
+        id: tfChanged_false
+        if: steps.changed-files-terraform.outputs.only_changed == 'false'
+        run: |
+          echo "tf_dir_changed=false" >> $GITHUB_ENV
+
+      # validate logic is working correctly
+      - name: Run step if terraform files changed
+        if: ${{ env.tf_dir_changed == 'true' }}
+        run: |
+          echo "terraform directory files have changed."
+
+          for file in ${{ steps.changed-files-terraform.outputs.added_files }}; do
+                      echo "$file was added"
+          done
+
+      - name: Run step if terraform files have not changed
+        if: ${{ env.tf_dir_changed == 'false' }}
+        run: |
+          echo "No terraform directory files have changed."
+
+      - id: step1
+        run: echo "::set-output name=test::${{ env.tf_dir_changed }}"
+      - id: step2
+        run: echo "::set-output name=test::world"
+
+  job2:
+    runs-on: ubuntu-latest
+    needs: set-conditions
+    steps:
+      - run: echo ${{needs.set-conditions.outputs.output1}} ${{needs.job1.outputs.output2}}
+
   call-terraform:
     uses: arthurdayton116/blog-site/.github/workflows/terraform-wf.yml@main
     with:
@@ -27,7 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: development
-      url: https://github.com/arthurdayton116/blog-site/settings/environments?development
+      url: https://development
     needs: call-terraform
     # set environment variables
     env:
@@ -47,6 +117,8 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+      # Checkout
+      - uses: actions/checkout@v2
       # Checkout previous commit for compare
       # https://github.com/tj-actions/changed-files
       - name: Checkout into lastCommit
